[tool.poetry]
name = "zalfmas-fbp"
version = "0.1.0"
description = "ZALF/MAS FBP Python components"
authors = ["Michael Berg-Mohnicke <michael.berg@zalf.de>"]
license = "MPL v2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pycapnp = "2.0"
uuid = "^1.30"
pathlib = "^1.0.1"
numpy = "^1.26.4"
pyproj = "^3.6.1"
scipy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
