[tool.poetry]
name = "scratch-code"
version = "0.1.0"
description = ""
authors = ["Michael Berg-Mohnicke <michael.berg@zalf.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
zalfmas-common = "^0.1.7"
zalfmas-capnp-schemas = "^0.1.14"
#zalfmas-fbp = "^0.2.2"
zalfmas-fbp = {path = "../../../../mas_python_fbp", develop = true}
pyzmq = "^26.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
