[tool.poetry]
name = "zalfmas-common"
version = "0.1.8"
description = "Common code for ZALF MAS projects"
authors = ["Michael Berg-Mohnicke <michael.berg@zalf.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pycapnp = "^2.0.0"
pysodium = "^0.7.17"
pyproj = "^3.6.1"
scipy = "^1.13.1"
pandas = "^2.2.2"
psutil = "^6.1.0"
#zalfmas-capnpschemas = {path = "../../..", develop = true}
tomlkit = "^0.13.2"
zalfmas-capnp-schemas = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
