[tool.poetry]
name = "zalfmas-services"
version = "0.1.0"
description = ""
authors = ["Michael Berg-Mohnicke <michael.berg@zalf.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pycapnp = "^2.0.0"
zalfmas-capnpschemas = { path = "../../..", develop = true }
#zalfmas-common = { path = "../../zalfmas-common", develop = true }
zalfmas-common = {path = "../zalfmas-common", develop = true}
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
