[tool.poetry]
name = "zalfmas-services"
version = "0.1.0"
description = ""
authors = ["Michael Berg-Mohnicke <michael.berg@zalf.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pycapnp = "^2.0.0"
numpy = "^2.1.2"
tomli = "^2.0.1"
#zalfmas-common = {path = "../zalfmas-common", develop = true}
zalfmas-common = "^0.1.5"
#zalfmas-capnpschemas = { path = "../../..", develop = true }
#zalfmas-capnp-schemas = "^0.1.0"
click = "^8.1.7"
tomlkit = "^0.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
